# Backtrace-

./: .gitignore  CMakeLists.txt  README.md
Common/DSP/: BitReducer.h  DCBlocker.h  Filters.h  JitterEngine.h  MachineDrift.h  ModernPitchShifter.h  NoiseEngine.h  SampleRateReducer.h  SamplerPitchEngine.h  Saturation.h  StereoWidener.h
Common/UI/: CaseFileOverlay.h  PitchSliderLookAndFeel.h  SDColors.h  SnapSlider.h  SquareKnobLookAndFeel.h
Common/Utilities/: ParameterHelpers.h
Common/Vault/: CaptureEngine.h
Docs/: Backtrace_DesignSpec.md  BuildGuide.md
Plugins/Backtrace/: CMakeLists.txt
Plugins/Backtrace/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Backtrace/Source/Audio/: ReverseEngine.h  SyncCapture.h
Plugins/Backtrace/Source/DSP/: ColdRack.h  DelayMachine.h  LivePreverb.h  MagneticDrum.h  ModernSpace.h  PedalDigital.h  PlateVerb.h  ReverbSpace.h  ShimmerVerb.h  SpringVerb.h  TapeEcho.h  TapeWitness.h  TimeStretch.h  VaultDelay.h  VelvetHall.h
Plugins/Backtrace/Source/UI/: DragOutZone.h  FadeCurve.h  KnobLNF.h  LiveScope.h  SlotButton.h  SwellCanvas.h  WaveformCanvas.h
Plugins/Backtrace/Source/Utilities/: FactoryPresets.h
Plugins/Backtrace/Tests/: RenderTest.cpp  SafetyTest.cpp
Plugins/CaseFile/: CMakeLists.txt
Plugins/CaseFile/Source/: AnalysisEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SuspectRules.h  TabsCase.cpp  TabsForms.cpp
Plugins/CaseFile/Tests/: LogicTest.cpp
Plugins/Clocker/: CMakeLists.txt
Plugins/Clocker/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Clocker/Tests/: GuiProbe.cpp  LogicTest.cpp
Plugins/Dust1200/: CMakeLists.txt
Plugins/Dust1200/Manual/: dust1200_manual.html
Plugins/Dust1200/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/Dust1200/Source/DSP/: NoiseGate.h
